--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alexandra Kuular",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -21,9 +21,9 @@
     "mongoose": "^7.4.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint-plugin-import": "^2.27.5",
+    "nodemon": "^3.0.1"
   }
 }
