--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "Alexandra Kuular",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "eslint": "^8.45.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.0"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^8.45.0",
